Editor: prevent overflow in comments
This aligns with the styles we have for other types of texts.

--- a/pootle/static/css/editor.css
+++ b/pootle/static/css/editor.css
@@ -499,7 +499,9 @@ html[dir="rtl"] table td.translate-translation
     display: inline;
     font-size: 85%;
     line-height: 120%;
+
     word-break: break-word;
+    overflow-wrap: break-word;
 }
 
 /* Force-wrap URLs */
